# aai-520-in3-project

./: 0. FinalProject_Investment_Research_Report-v5.ipynb  4. Richa_Stock_LLM_Suggests_CPUVersion-v4.ipynb  Project Meeting Minutes - September 13, 2025.docx  ProjectStockAnalysis.ipynb  README.md  Richa_Stock_Analysis_TechRiskPort_Opt-v3.ipynb  Richa_Stock_Sentiments-v2.ipynb  Richa_stock_analyzer-v1.ipynb  StockSentimentAgent_MultiStock_Member1.ipynb  meeting-notes.md  stock_sentiment_analyzer-raminder-v1.py  tech-approach.md
final_project/: FinalProject_v13.ipynb  FinalProject_v13_clean.html  FinalProject_v13_clean.ipynb  README.md  finalproject_v13.py
raminder-playground/: main.py  pyproject.toml  stock_sentiment_analyzer-raminder-v1.py
raminder-playground/chroma_db/: chroma.sqlite3
