[project]
name = "raminder-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.1.1",
    "datasets>=4.2.0",
    "feedparser>=6.0.12",
    "hf-xet>=1.1.10",
    "huggingface-hub[hf-xet]>=0.35.3",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-perplexity>=0.1.2",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "newsapi-python>=0.2.7",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "yfinance>=0.2.66",
]
